--- a/college-management-system-hw3/src/main/resources/application.properties
+++ b/college-management-system-hw3/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.application.name=college-management-system-hw3
 
 spring.datasource.url=jdbc:mysql://localhost:3306/CollegeManagementSystem?useSSL=false&allowPublicKeyRetrieval=true
 
-spring.datasource.username=root
-spring.datasource.password=Nishint102@
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
